# datavalgen

./: .gitignore  Dockerfile  Makefile  README.md  TODO.md  pyproject.toml
.github/workflows/: build_and_release.yaml
src/datavalgen/: __init__.py  __main__.py  check_result.py  factory.py  plugins.py  read_csv.py  readcsv.py  report_errors.py  safe_validate.py  safe_validate_run_context.py  safevalidate.py  validate.py
src/datavalgen/cli/: generate.py  validate.py
src/datavalgen/cli/utils/: docker.py  print.py
tests/: test_plugins.py  test_safe_validate.py  test_safe_validate_run_context.py  test_safevalidate.py  test_validate.py  test_validate_format_errors.py
