[build-system]
requires = ["uv_build>=0.10.9,<0.11.0"]
build-backend = "uv_build"

[project]
name = "datavalgen"
version = "0.3.0"
description = "Tiny tool with the aim of providing a common way to validate (and generate) simple data."
readme = "README.md"
license = "MIT"
license-files = ["LICENSE"]
requires-python = ">=3.13"
dependencies = [
    "pandas==2.3.3",
    "pydantic==2.12.5",
    "polyfactory==3.1.0",
    "run_context_py @ https://github.com/mdw-nl/run-context-py/archive/refs/tags/v0.0.2.tar.gz",
]

[project.scripts]
datavalgen = "datavalgen.__main__:main"

[project.entry-points."run_context"]
safe_validate = "datavalgen.safe_validate:safe_validate"

[project.optional-dependencies]
test = ["pytest>=8"]

[tool.uv.build-backend]
module-name = "datavalgen"
